CONNECTION STRING IMPROVED

--- a/Lagoon.Web/appsettings.json
+++ b/Lagoon.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Lagoon;User Id=sa;Password=Asdf@1234;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=Lagoon;User Id=sa;Password=Asdf@1234;Trusted_Connection=True;Integrated Security=False;TrustServerCertificate=True;"
   }
 }
