--- a/Lagoon.Domain/Lagoon.Domain.csproj
+++ b/Lagoon.Domain/Lagoon.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="2.0.1" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
